# salamatian-webapp

./: .env.example  .gitignore  Dockerfile  Dockerfile.mirror  LICENSE  Makefile  README.md  alembic.ini  docker-compose.mirror.yml  docker-compose.yml  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_supplier_year_nullable.py
app/: config.py  database.py  main.py
app/admin/: _deps.py  cars.py  dashboard.py  excel.py  leads.py  logs.py  media.py  settings.py
app/api/: auth.py  cars.py  excel.py  leads.py  notifications.py
app/core/: cache.py  cookies.py  permissions.py  security.py
app/models/: __init__.py  _types.py  audit_log.py  car.py  car_image.py  car_seo.py  excel_import_log.py  lead.py  notification.py  user.py
app/public/: routes.py
app/schemas/: auth.py  car.py  lead.py
app/services/: car_service.py  excel_sync.py  lead_service.py  media.py  notification.py
app/static/: index.html
app/static/css/: admin.css
app/templates/: base.html
app/templates/admin/: car_form.html  cars_list.html  dashboard.html  error.html  excel_import.html  excel_preview.html  layout.html  leads.html  login.html  logs.html  media.html  settings.html
app/templates/public/: car_popup.html  index.html
app/workers/: beat_schedule.py  celery_app.py  tasks.py
font/: index.html
nginx/: nginx.conf
nginx/ssl/: fullchain.pem  privkey.pem
scripts/: seed_admin.py
tests/: conftest.py  test_auth_api.py  test_car_service.py  test_excel_sync.py  test_security.py
