[project]
name = "salamatian"
version = "0.1.0"
description = "Salamatian Used Cars Management Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "PyJWT>=2.9.0",
    "redis>=5.0.4",
    "celery>=5.4.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.2",
    "Pillow>=10.3.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.1.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
